--- a/index.html
+++ b/index.html
@@ -5,18 +5,35 @@
 </body>
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script>
-        const root = document.getElementById("root");
-        const h3 = React.createElement("h3", {
-            onMouseEnter: () => console.log('mouse enter'),
-        }, "Hello I am a span");
-        const btn = React.createElement("button", {
-            onClick: () => console.log('im clicked'),
-            style: {
-                backgroundColor: "tomato",
-            }
-        }, "Click me");
-        const container = React.createElement("div", null, [h3, btn]);
+<script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js":"></script>
+<script type="text/babel">
+    const root = document.getElementById("root");
+    const Title = (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+            Hello I'm a title    
+        </h3>
+    );
+    const Button = (
+        // jsx style
+        <button
+            style={{backgroundColor : "tomato",
+        }}
+        onClick={() => console.log("im clicked")}
+        >Click me</button>
+    )
+        // const root = document.getElementById("root");
+        // const h3 = React.createElement("h3", {
+        //     onMouseEnter: () => console.log('mouse enter'),
+        // }, "Hello I am a span");
+        // const btn = React.createElement("button", {
+        //     onClick: () => console.log('im clicked'),
+        //     style: {
+        //         backgroundColor: "tomato",
+        //     }
+        // }, "Click me");
+        // const container = React.createElement("div", null, [h3, btn]);
+        // ReactDOM.render(container, root);
+        const container = React.createElement("div", null, [Title, Button]);
         ReactDOM.render(container, root);
     </script>
 </html>
