--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js":"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
+    const Title = () => (
         <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
             Hello I'm a title    
         </h3>
     );
-    const Button = (
+    const Button = () => (
         // jsx style
         <button
             style={{backgroundColor : "tomato",
@@ -33,7 +33,10 @@
         // }, "Click me");
         // const container = React.createElement("div", null, [h3, btn]);
         // ReactDOM.render(container, root);
-        const container = React.createElement("div", null, [Title, Button]);
-        ReactDOM.render(container, root);
+        const Container = () => (<div>
+            <Title/> 
+            <Button/>
+        </div>)
+        ReactDOM.render(<Container/>, root);
     </script>
 </html>
