--- a/index.html
+++ b/index.html
@@ -10,15 +10,38 @@
     const root = document.getElementById("root");
 
     function App() {
-        let [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-            setCounter(counter + 1);
-        };
+        const [amount, setAmount] = React.useState();
+        const [flipped, setFlipped] = React.useState(false);
+        const onChange = (event) => {
+            setAmount(event.target.value);
+        }
+        const reset = () => {
+            setAmount(0);
+        }
+        const onFlip = () => {
+            reset();
+            setFlipped(current => !current);
+        }
+
+
 
         return (
             <div>
-                <h3>Total clicks: {counter}</h3>
-                <button onClick={onClick}>Click me</button>
+                <h3 className="hi">Super Converter</h3>
+
+                <label htmlFor="minutes">Minutes</label>
+                <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
+                onChange={onChange}
+                disabled={flipped}
+                />
+
+                <h2>You want to convert {amount} mins to hours</h2>
+
+                <label htmlFor="hours">Hours</label>
+                <input value={flipped? amount : Math.round(amount/60)} id="hours" placeholder="Hours" type="number"
+                disabled={!flipped} onChange={onChange}/>
+                <button onClick={reset}>reset</button>
+                <button onClick={onFlip}>{flipped ? "Turn back" : "Invert"}</button>
             </div>
         );
     }
