--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function App() {
+    function MinutesToHours() {
         const [amount, setAmount] = React.useState();
         const [flipped, setFlipped] = React.useState(false);
         const onChange = (event) => {
@@ -22,20 +22,14 @@
             reset();
             setFlipped(current => !current);
         }
-
-
-
         return (
             <div>
-                <h3 className="hi">Super Converter</h3>
 
                 <label htmlFor="minutes">Minutes</label>
                 <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
                 onChange={onChange}
                 disabled={flipped}
                 />
-
-                <h2>You want to convert {amount} mins to hours</h2>
 
                 <label htmlFor="hours">Hours</label>
                 <input value={flipped? amount : Math.round(amount/60)} id="hours" placeholder="Hours" type="number"
@@ -44,6 +38,28 @@
                 <button onClick={onFlip}>{flipped ? "Turn back" : "Invert"}</button>
             </div>
         );
+    }
+    function KmToMiles() {
+        return <h3>KM 2 M</h3>
+    }
+    function App() {
+        const [index, setIndex] = React.useState("0");
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+        return (
+            <div>
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value="0">Minutes & Hours</option>
+                    <option value="1">Km & Miles</option>
+                    <MinutesToHours />
+                    <KmToMiles />
+                </select>
+                {index === "0" ? <MinutesToHours /> : null}
+                {index === "1" ? <KmToMiles /> : null}
+            </div>
+        )
     }
 
     
