--- a/index.html
+++ b/index.html
@@ -9,55 +9,27 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function MinutesToHours() {
-        const [amount, setAmount] = React.useState();
-        const [flipped, setFlipped] = React.useState(false);
-        const onChange = (event) => {
-            setAmount(event.target.value);
-        }
-        const reset = () => {
-            setAmount(0);
-        }
-        const onFlip = () => {
-            reset();
-            setFlipped(current => !current);
-        }
+    function Btn({text, big}) {
         return (
-            <div>
-
-                <label htmlFor="minutes">Minutes</label>
-                <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
-                onChange={onChange}
-                disabled={flipped}
-                />
-
-                <label htmlFor="hours">Hours</label>
-                <input value={flipped? amount : Math.round(amount/60)} id="hours" placeholder="Hours" type="number"
-                disabled={!flipped} onChange={onChange}/>
-                <button onClick={reset}>reset</button>
-                <button onClick={onFlip}>{flipped ? "Turn back" : "Invert"}</button>
-            </div>
-        );
-    }
-    function KmToMiles() {
-        return <h3>KM 2 M</h3>
+            <button 
+                style={{
+                    backgroundColor: "tomato",
+                    color: "white",
+                    padding: "10px 20px",
+                    border: 0,
+                    borderRadius: 10,
+                    fontSize: big ? 32 : 16
+                }}>
+                {text}
+            </button>
+        )
     }
     function App() {
-        const [index, setIndex] = React.useState("0");
-        const onSelect = (event) => {
-            setIndex(event.target.value);
-        }
+        
         return (
             <div>
-                <h1>Super Converter</h1>
-                <select value={index} onChange={onSelect}>
-                    <option value="0">Minutes & Hours</option>
-                    <option value="1">Km & Miles</option>
-                    <MinutesToHours />
-                    <KmToMiles />
-                </select>
-                {index === "0" ? <MinutesToHours /> : null}
-                {index === "1" ? <KmToMiles /> : null}
+                <Btn text="click" big="true"/>
+                <Btn text="touch"/>
             </div>
         )
     }
