--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function Btn({text, big}) {
+    function Btn({text, onClick}) {
+        console.log(text, "was rendered.")
         return (
             <button 
+                onClick= {onClick}
                 style={{
                     backgroundColor: "tomato",
                     color: "white",
                     padding: "10px 20px",
                     border: 0,
                     borderRadius: 10,
-                    fontSize: big ? 32 : 16
+                    fontSize: 16
+                    
                 }}>
                 {text}
             </button>
         )
     }
+
+    const MemorizedBtn = React.memo(Btn)
+
     function App() {
-        
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () => setValue("Revert Changes");
         return (
             <div>
-                <Btn text="click" big="true"/>
-                <Btn text="touch"/>
+                <Btn text={value} onClick={changeValue}/>
+                <Btn text="Continue"/>
             </div>
         )
     }
