--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function Btn({text, onClick}) {
+    function Btn({text, fontSize = 20, onClick}) {
         console.log(text, "was rendered.")
         return (
             <button 
@@ -20,10 +20,10 @@
                     padding: "10px 20px",
                     border: 0,
                     borderRadius: 10,
-                    fontSize: 16
+                    fontSize
                     
                 }}>
-                {text}
+                {text} and {fontSize}
             </button>
         )
     }
@@ -35,8 +35,8 @@
         const changeValue = () => setValue("Revert Changes");
         return (
             <div>
-                <Btn text={value} onClick={changeValue}/>
-                <Btn text="Continue"/>
+                <MemorizedBtn text={value} fontSize={26} onClick={changeValue}/>
+                <MemorizedBtn text="Continue"/>
             </div>
         )
     }
